--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -2,21 +2,23 @@
 
 * 一、非线性时间比较类排序
   * 1.1 交换排序
-    * [冒泡排序](#1.1.1)
-    * [快速排序](#1.1.2)
+    * [冒泡排序](#1.1.1)：O(N2) 稳定
+    * [快速排序](#1.1.2)：O(NlogN) 不稳定
   * 1.2 插入排序
-    * [直接插入排序](#1.2.1)
-    * [希尔排序](#1.2.2)
+    * [直接插入排序](#1.2.1)：O(N2) 稳定
+    * [希尔排序](#1.2.2)：O(NlogN) 不稳定
   * 1.3 选择排序
-    * [直接选择排序](#1.3.1)
-    * [堆排序](#1.3.2)
-  * 1.4 [归并排序](#1.4)
+    * [直接选择排序](#1.3.1)：O(N2) 不稳定
+    * [堆排序](#1.3.2)：O(NlogN) 不稳定
+  * 1.4 [归并排序](#1.4)：O(NlogN) 稳定
 * 二、线性时间非比较类排序
-  * 2.1 [计数排序](#2.1)
+  * 2.1 [计数排序](#2.1)：O(N + K) 稳定
   * 2.2 [桶排序](#2.2)
   * 2.3 [基数排序](2.2)
 
 ![01](pic/01.png)
+
+排序算法的稳定性：能保证排序前2个相等的数其在序列的前后位置顺序和排序后它们两个的前后位置顺序相同——则稳定
 
 ```
 背景：给一个整数数组nums，要求将该数组升序或者降序排列。
@@ -43,11 +45,9 @@ public:
     }
     //冒泡排序的实现
     void bubbleSort(vector<int>& arr) {
-        int len = arr.size();
-        for(int i = 0; i < len - 1; i++) {  //i控制len-1趟冒泡（len-1是因为最后一个数不需要比较，自然会得到）
+        for(int i = 0; i < arr.size() - 1; i++) {  //i控制len-1趟冒泡（len-1是因为最后一个数不需要比较，自然会得到）
             //j控制每趟冒泡时两两比较的下标索引
-            //第i趟说明接下来要“沉”第i(+1)个数，那么需要进行两两交换的次数就等于len-1-i
-            for(int j = 0; j < len - (i + 1); j++) {  
+            for(int j = 0; j < arr.size() - 1 - i; j++) {  //(arr.size() - 1) - i
                 if(arr[j] > arr[j + 1]) {  //降序：">"改成"<"
                     swap(arr[j], arr[j + 1]);
                 }
@@ -106,6 +106,7 @@ public:
 >
 > 空间复杂度：`O(logN)`，这里占用的空间主要来自递归函数的栈空间
 
+ 快速排序之所比较快，因为相比冒泡排序，每次交换是跳跃式的。每次排序的时候设置一个基准点，将小于等于基准点的数全部放到基准点的左边，将大于等于基准点的数全部放到基准点的右边。这样在每次交换的时候就不会像冒泡排序一样每次只能在相邻的数之间进行交换，交换的距离就大的多了。因此总的比较和交换次数就少了，速度自然就提高了。当然在最坏的情况下，仍可能是相邻的两个数进行了交换。因此快速排序的最差时间复杂度和冒泡排序是一样的都是`O(N2)`，它的平均时间复杂度为`O(NlogN)`。
 
 
 <h2 id="1.2.1">插入排序</h2>
@@ -117,6 +118,8 @@ public:
 3. 如果该元素（已排序）大于新元素，将该元素移到下一个位置；
 4. 重复步骤3，直到找到已排序的元素小于或者等于新元素的位置；
 5. 将新元素插入到该位置后，重复2~5
+
+总结：默认第一个数是有序的，`i`从第二个数开始，将`nums[i]`与前面的有序数组逐一比较大小，找到合适的位置，借助`j`插入进去，直到`i`将`nums`中所有的数字遍历完成
 
 **代码（默认升序）**：
 
@@ -207,7 +210,7 @@ public:
 
 **思路**：
 
-每一轮选择最小的元素，将其交换到前面未排定部分的开头。
+每一轮**选择**最小的元素，将其交换到前面**未排定部分**的开头。
 
 也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面下标区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
 
@@ -246,9 +249,11 @@ public:
 
 <h2 id="1.3.2">堆排序</h2>
 
+**堆**通常是一个可以被看做一棵**完全二叉树的数组对象**
+
 **思路**：
 
-* 将无需序列构建成一个堆，根据升序降序需求选择大顶堆或小顶堆
+* 将无序序列构建成一个堆，根据升序降序需求选择大顶堆或小顶堆
 * 将堆顶元素与末尾元素交换，将最大元素"沉"到数组末端
 * 重新调整结构，使其满足堆定义，然后继续交换堆顶元素与当前末尾元素，反复执行调整+交换步骤，直到整个序列有序
 
@@ -288,7 +293,7 @@ public:
             adjustHeap(arr, 0, i);
         }
     }
-
+   
     //建堆函数的实现
     void buildHeap(vector<int>& arr) {
         int len = arr.size();
@@ -311,10 +316,10 @@ public:
             if(arr[k] < arr[j]) {  //如果不满足大顶堆的要求
                 swap(arr[k], arr[j]);  //则将两个值交换（小的值下沉）
             }
-            else {  //否则说明此小分支满足大顶堆的要求，退出循环
+            else {  //否则说明此小分支满足大顶堆的要求，无需交换，退出循环
                 break;
             }
-            k = j;  //交换完成后将k更新为j，因为不能保证当前的子节点是它子树的最大值，所以需要继续向下比较
+            k = j;  //交换完成后将k更新为j，因为发生了交换，不能保证当前的子节点是它子树的最大值，所以需要继续向下比较
         }
     }
 };
@@ -389,7 +394,7 @@ public:
 **思路**：
 
 * 记录原数组中的`max`和`min`
-* 创建`max-len + 1`这么大跨度的数组`count`用于统计原数组中各数字出现的次数（下标为数字，值为出现的次数）
+* 创建`max-min + 1`这么大跨度的数组`count`用于统计原数组中各数字出现的次数（下标为数字，值为出现的次数）
 * 将`count`中值大于`0`的下标索引输出到原数组中（注意还原时加上`min`）
 
 **代码（默认升序）**：
@@ -406,7 +411,7 @@ public:
         //记录原数组中的max和min
         int max = *max_element(arr.begin(), arr.end());
         int min = *min_element(arr.begin(), arr.end());
-        //创建max-len这么大跨度的数组count用于统计原数组中各数字出现的次数（下标为数字，值为出现的次数）
+        //创建max-min+1这么大跨度的数组count用于统计原数组中各数字出现的次数（下标为数字，值为出现的次数）
         int len = max - min + 1;
         vector<int> count(len, 0);  
         for(int i = 0; i < arr.size(); i++) {
