--- a/动态规划/198.打家劫舍_M/198.打家劫舍_M.md
+++ b/动态规划/198.打家劫舍_M/198.打家劫舍_M.md
@@ -27,15 +27,19 @@
 
    ![](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92/198.%E6%89%93%E5%AE%B6%E5%8A%AB%E8%88%8D_M/01.jpg)
 
-   `k` 个房子中最后一个房子下标是 `k−1`。如果不偷这个房子，那么问题就变成在前 `k-1` 个房子中偷到最大的金额，也就是子问题 `f(k−1)`。如果偷这个房子，那么前一个房子 `k−2` （下标）显然不能偷，其他房子不受影响。那么问题就变成在前 `k-2` 个房子中偷到的最大的金额。两种情况中，选择金额较大的一种结果。
+   `k` 个房子中最后一个房子下标是 `k−1`
 
-   因此递推关系式为：`dp[k] = max(dp[k - 1], dp[k - 2] + nums[k - 1]);`
+   **如果不偷这个房子**，那么问题就变成在前 `k-1` 个房子中偷到最大的金额，也就是子问题 `f(k−1)`
+
+   **如果偷这个房子**，那么前一个房子 `k−2` （下标）显然不能偷，其他房子不受影响。那么问题就变成在前 `k-2` 个房子中偷到的最大的金额。两种情况中，选择金额较大的一种结果
+
+   因此递推关系式为：`dp[k] = max(dp[k - 1], dp[k - 2] + nums[k - 1]);``dp[k]`代表前`k`个房间中能够偷到的最大金额
 
    最后确定`DP`数组的初始值`dp[0] = 0, dp[1] = nums[0]`
 
 3. 确定`DP`数组的计算顺序：
 
-   我们分析子问题的依赖关系，发现每个`dp[k]` 依赖 `dp[k-1]` 和 `dp[k-2]`，因此 `DP` 数组的计算顺序就是从左向右。这样我们可以保证，计算一个子问题的时候，它所依赖的那些子问题已经计算出来了。
+   我们分析子问题的依赖关系，发现每个`dp[k]` 依赖 `dp[k-1]` 和 `dp[k-2]`，因此 `DP` 数组的计算顺序就是从左向右。这样我们可以保证，计算一个子问题的时候，它所依赖的那些子问题已经计算出来了
 
 
 【题解代码—DP】
