--- a/哈希表/136.只出现一次的数字_E.md
+++ b/哈希表/136.只出现一次的数字_E.md
@@ -100,7 +100,7 @@ public:
 
 ```c++
 a ⊕ b ⊕ c ⊕ b ⊕ c
-= a ⊕ (b ⊕ c) ⊕ (c ⊕ c)
+= a ⊕ (b ⊕ b) ⊕ (c ⊕ c)
 = a ⊕ 0 ⊕ 0
 = a
 ```
@@ -111,7 +111,7 @@ a ⊕ b ⊕ c ⊕ b ⊕ c
 class Solution {
 public:
     int singleNumber(vector<int>& nums) {
-        int single = 0;
+        int single = 0;  //任何数和0异或，仍为本身
         for(int elem : nums){  //遍历nums
             single ^= elem;  //按位异或
         }
