--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -149,7 +149,7 @@ public:
 };
 ```
 
-> 时间复杂度：`O(N^2)`
+> 时间复杂度：最好`O(N)`（已经有序） 最坏`O(N^2)`（全部倒序）
 >
 > 空间复杂度：`O(1)`
 
@@ -178,7 +178,7 @@ public:
         while(3 * gap + 1 < len) {
             gap = 3 * gap + 1;
         }
-        while(gap >= 1) {
+        while(gap >= 1) {  //最后gap都会等于1，所以此处为">="
             //按照间隔gap将nums分成不同的组，每个组内进行插入排序
             //直至最后gap为1，所有元素都在同一组中，便是基本的插入排序算法
             for(int i = gap; i < len; i++) {
