--- a/链表/141.环形链表_E.md
+++ b/链表/141.环形链表_E.md
@@ -154,3 +154,34 @@ public:
 };
 ```
 
+【三刷】
+
+参考环形链表II，代码其实可以写的很简单：
+
+```c++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    bool hasCycle(ListNode *head) {
+        ListNode* slow = head, *fast = head;
+        while(fast != NULL && fast->next != NULL) {  //fast==NULL或者fast->next==NULL，说明链表没有环
+            //快慢双指针向前移动
+            fast = fast->next->next;  
+            slow = slow->next;
+            //如果快慢指针相遇了
+            if(slow == fast) {
+                return true;  //链表有环
+            }
+        }
+        return false;  //否则链表无环
+    }
+};
+```
+
