--- a/动态规划/198.打家劫舍_M/198.打家劫舍_M.md
+++ b/动态规划/198.打家劫舍_M/198.打家劫舍_M.md
@@ -77,3 +77,23 @@ public:
 };
 ```
 
+【二刷】
+
+精简代码，`dp[i]`代表`nums`中以下标`i`为结尾位置能偷盗的最大金额
+
+```c++
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        if(nums.size() < 2) return nums[0];
+        vector<int> dp(nums.size(), 0);
+        dp[0] = nums[0];
+        dp[1] = max(nums[0], nums[1]);
+        for(int i = 2; i < nums.size(); i++) {
+            dp[i] = max(dp[i - 1], dp[i - 2] + nums[i]);
+        }
+        return dp[nums.size() - 1];
+    }
+};
+```
+
