--- a/动态规划/647.回文子串_M.md
+++ b/动态规划/647.回文子串_M.md
@@ -16,7 +16,7 @@
 
 【我的思路—DP】
 
-使用[ 5.最长回文子串](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92/5.%E6%9C%80%E9%95%BF%E5%9B%9E%E6%96%87%E5%AD%90%E4%B8%B2_M.md) 的动态规划思路，对字符串`s`进行遍历，并在遍历过程中统计回文子串的数目
+使用[ 5.最长回文子串](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92/5.%E6%9C%80%E9%95%BF%E5%9B%9E%E6%96%87%E5%AD%90%E4%B8%B2_M.md) 的动态规划思路，对字符串`s`进行遍历，规定`dp[L][R]`为从下标`L`到`R`的字符串是否为回文串，并在遍历过程中统计回文子串的数目
 
 【我的代码—DP】
 
